# coursework-Bank

./: README.md  main.py  pyproject.toml
data/: operations.xlsx  user_settings.json
src/: logger.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
